pagina modificada en html, pero terminada

--- a/index.html
+++ b/index.html
@@ -47,5 +47,8 @@
         <li>Formulario de Solicitud de Acceso</li>
     </ul>
   </section>
+  <section class="notificaciones">
+    <p>Nueva publicación disponible</p>
+  </section>
 </body>
 </html>
