css mediio hecho

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section class="experimento">
+<div class="izquierda">
+    <section class="experimento">
     <h2>Experimento A</h2>
     <p>65%</p>
     <h2>Experimento B</h2>
@@ -15,10 +16,33 @@
     <h2>Experimento C</h2>
     <p>100%</p>
   </section> 
-  <section class="Informacion_aleatoria">
+  
+   <section class="Informacion_aleatoria">
     <h3>Aprendiendo a realizar HTML y css</h3>
     <p>jfdvfdbvdfvjkgdvjdnvb</p>
   </section>
+  <div class="fila-inferior">
+  <section class="recursos">
+    <ul>
+        <li>Manual de laboratorio</li>
+        <li>Guía de Buenas Prácticas</li>
+        <li>Formulario de Solicitud de Acceso</li>
+    </ul>
+  </section>
+  
+  <section class="bloques_informacion">
+    <h1>Últimas Convocatorias</h1>
+    <p>SKJVDNKLBÑDN L DF</p>
+    <h1>Avisos de Biblioteca</h1>
+    <p>vdklvkvbflvbdkvdjfjg</p>
+    <h1>Eventos de Hoy</h1>
+    <p>jkvfbldfbdkvbvkjvbvbvfv</p>
+  </section>
+</div>
+</div>
+
+<div class="derecha">
+  
   <header class="cabecera">
 
     <h1>Observatorio Científico</h1>
@@ -30,25 +54,8 @@
         </ul>
     </nav>
   </header>
-
-  <section class="bloques_informacion">
-    <h1>Últimas Convocatorias</h1>
-    <p>SKJVDNKLBÑDN L DF</p>
-    <h1>Avisos de Biblioteca</h1>
-    <p>vdklvkvbflvbdkvdjfjg</p>
-    <h1>Eventos de Hoy</h1>
-    <p>jkvfbldfbdkvbvkjvbvbvfv</p>
-  </section>
-
-  <section class="recursos">
-    <ul>
-        <li>Manual de laboratorio</li>
-        <li>Guía de Buenas Prácticas</li>
-        <li>Formulario de Solicitud de Acceso</li>
-    </ul>
-  </section>
-  <section class="notificaciones">
-    <p>Nueva publicación disponible</p>
-  </section>
+  </div>
 </body>
 </html>
+
+  
